@@ -141,7 +141,8 @@ typedef struct sParticle
 @property (readwrite,assign) float emissionRate;
 @property (readwrite,assign) int totalParticles;
 
-
+//! Initializes a system with a fixed number of particles
+-(id) initWithParticles:(int) numberOfParticles;
 //! Add a particle to the emitter
 -(BOOL) addParticle;
 //! Update all particles
